changed final test url to /new-b. removed old tests (a,b,c,d). left-aligned install instructions. bug 814203

--- a/media/css/firefox/new-test.less
+++ b/media/css/firefox/new-test.less
@@ -121,10 +121,10 @@
     .clearfix;
     li {
         float: left;
-        width: 232px;
-        padding: 0 34px;
+        width: 248px;
+        padding: 0 26px;
         margin: 0;
-        text-align: center;
+        text-align: left;
         font-size: 12px;
         color: @textColorTertiary;
         font-style: italic;
